resque-scheduler produce interesting bug. Should figure out how to fix it

--- a/config/resque_schedule.yml
+++ b/config/resque_schedule.yml
@@ -1,6 +1,6 @@
 pull_cbr:
-  cron: '*/10 * * * *'
-  class: 'CbrPullJob'
-  queue: 'pull_cbr_queue'
+  # cron: '*/10 * * * *'
+  every: 60s
+  class: CbrPullJob
   args:
-  description: 'Pull current currencies from CBR'
+  description: Pull current currencies from CBR
