react stops to update parent state

--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,5 +1,8 @@
-development:
-  adapter: async
+local: &local
+  url: redis://localhost:6379
+
+development: *local
+test: *local
 
 test:
   adapter: async
