--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,4 @@ services:
   - postgresql
 before_script:
   - psql -c 'create database courser_test;' -U postgres
+script: xvfb-run bundle exec rspec
