--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,7 @@ services:
   - postgresql
 before_script:
   - psql -c 'create database courser_test;' -U postgres
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
 script: xvfb-run bundle exec rspec
