--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,6 @@ services:
   - postgresql
 before_script:
   - psql -c 'create database courser_test;' -U postgres
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+
