--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,9 @@ rvm:
 services:
   - redis-server
   - postgresql
-before_script:
-  - psql -c 'create database courser_test;' -U postgres
+before_script:  
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
+  - psql -c 'create database courser_test;' -U postgres
+  - sleep 5
 
